# powerplay-parser

./: .gitignore  COMPETITIVE_STATES_GUIDE.md  FINAL_RESULTS.md  OCR_IMPROVEMENTS_SUMMARY.md  PARSING_IMPROVEMENTS.md  QUICKSTART.md  README.md  README_IMPROVEMENTS.md  SUBSECTION_OCR_RESULTS.md  UPDATES.md  USAGE_SUMMARY.md  auto_capture.py  config.py  debug_ocr_cropped.py  debug_power_section.py  debug_status_match.py  example_usage.py  live_demo.py  manual_capture.py  powerplay_ocr.py  pyproject.toml  regenerate_ocr.py  test_auto_detect.py  test_compare_last_two.py  test_competitive.py  test_complete_system.py  test_cycle_detection.py  test_easyocr_simple.py  test_initial_cp.py  test_parsing.py  test_subsections.py
.claude/: settings.local.json
tests/: README.md  debug_parse23.py  test_all_screenshots.py  test_description_fallback.py  test_excel_format.py  test_hybrid_ocr.py  test_nocrop.py  test_ocr_improvements.py  test_parsing.py  test_rank_debug.py  test_subsection_parser.py
